10/06/2005 Bob Rossi <bob@brasko.net>

	* include/helptext.h: Autogenerated.
	* src/cgdb.c (term_attributes): Added global.
	(cleanup): Changed call from tty_reset to tty_set_attributes.
	(init_readline): Call tty_off_xon_xoff on readline's masterfd.
	(main): Call tty_get_attributes to get terminal attributes.

09/30/2005 Bob Rossi <bob@brasko.net>

	* cgdb.c (#include): Add ibuf.h.
	(current_line): Add global.
	(rline_last_prompt): Add global.
	(rlctx_send_user_command): Update for line continuation.
	(cleanup): Init current_line buffer.


09/30/2005 Bob Rossi <bob@brasko.net>

	* Makefile.am (AM_CFLAGS): Remove rlctx and add rline.
	(cgdb_LDFLAGS): Ditto.
	(cgdb_LDADD): Ditto.
	(cgdb_DEPENDENCIES): Ditto.
	* Makefile.in: Autogenerated.
	* cgdb.c (#include): Add fork_util, queue and rline.
	(readline_history_filename,readline_history_path,
	pty_pair, rline, is_tab_completing): Add global.
	(rlctx_send_user_command,tab_completion,
	readline_completion_display_func,do_tab_completion,rl_sigint_recved,
	change_prompt,update_prompt): New readline functions.
	(tgdb_readline_fd): Global removed.
	Made large scale changes to incorporate new readline changes.
	* interface.c (rl_sigint_recved): Add prototype.
	* sources.c (source_del): Cleanup after source files.

version 0.5.3 (08/08/2005):

08/02/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* lib/Makefile.in: Ditto.
	* src/Makefile.in: Autogenerated.

08/02/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* lib/Makefile.in: Ditto.
	* src/Makefile.am (cgdb_LDADD): Remove USE_PACKAGED_READLINE check.
	* src/Makefile.in: Autogenerated.

07/26/2005 Marcel Lanz <marcel.lanz@ds9.ch>

	* helptext.h: Autogenerated.
	* interface.c (toggle_breakpoint): Added function.
	(internal_if_input): Change 't' case statement to 'I'.
	(source_input): Have ' ' case statement call function.
	(source_input): Add 't' case statement.

07/13/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.