@@ -192,7 +192,7 @@ rlctx_send_user_command (char *line)
     rline_add_history (rline, cline);
 
   /* Send this command to TGDB */
-  if ( tgdb_send_debugger_data ( tgdb, cline, length) == -1 )
+  if ( tgdb_send_debugger_console_command (tgdb, cline) == -1 )
     logger_write_pos ( logger, __FILE__, __LINE__, "rlctx_send_user_command\n"); 
 
   ibuf_clear (current_line);
