@@ -1,5 +1,10 @@
 10/06/2005 Bob Rossi <bob@brasko.net>
 
+	* src/cgdb.c (rlctx_send_user_command): TGDB interface changed. 
+	Update CGDB.
+
+10/06/2005 Bob Rossi <bob@brasko.net>
+
 	* include/helptext.h: Autogenerated.
 	* src/cgdb.c (term_attributes): Added global.
 	(cleanup): Changed call from tty_reset to tty_set_attributes.
